# MSBT-yuina

./: .gitignore  Cargo.toml  LICENSE  MSBT-yuina.toml  README.md  build.rs
src/: app.manifest  app.rc  main.rs  updater.rs
