[package]
name = "MSBT-yuina"
version = "1.1.0"
edition = "2021"
authors = ["MSBT"]
description = "Simple Image Viewer"

[build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = 'z'       # 最小サイズ最適化
lto = "fat"           # 完全なLink Time Optimization
codegen-units = 1     # 単一ユニットでコンパイル（最適化効率向上）
panic = 'abort'       # パニック時のスタックトレース機能を無効化
strip = true          # デバッグシンボルを削除
rpath = false         # 動的リンカーパスを無効化
debug = false         # デバッグ情報を含めない
debug-assertions = false
overflow-checks = false

[dependencies]
eframe = "0.31"
image = "0.25"
log = "0.4"
ico = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
egui = { version = "0.31", default-features = false }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Com", "Win32_Graphics_Imaging"] }
log4rs = "1.3"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
base64 = "0.22"   # SVG内 @font-face の data URI フォントのデコード
flate2 = "1"      # .svgz（gzip圧縮SVG）の展開
ureq = { version = "2", features = ["json"] }  # 自動更新（GitHub Releases API・ダウンロード）
self-replace = "1"                             # 実行中の exe を新バージョンへ差し替え
